disabled-apps/whoami/whoami-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: whoami
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`whoami.ieeetamu.org`)
      kind: Rule
      services:
        - name: whoami
          port: 80
      middlewares: # apply the favicon since the container doesnt have one
        - name: traefik-helper-favicon
          namespace: traefik-helper
